--- a/YoutubeDL/Base.lproj/Main.storyboard
+++ b/YoutubeDL/Base.lproj/Main.storyboard
@@ -144,6 +144,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Playlist" id="MoB-Ic-cOw"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="FKD-IG-oKS">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refreshPlaylist:" destination="tMp-c5-PmB" eventType="valueChanged" id="W2Z-DY-GmG"/>
+                        </connections>
+                    </refreshControl>
                     <connections>
                         <segue destination="zvR-3b-iwG" kind="presentation" identifier="showVideo" modalPresentationStyle="fullScreen" id="QnJ-hV-2iC"/>
                     </connections>
